--- a/GSLC_9/ANALYSIS.ipynb
+++ b/GSLC_9/ANALYSIS.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import pointbiserialr, chi2_contingency, pearsonr\n",
     "# Set display options to show all rows and columns\n",
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n"
@@ -16,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +226,7 @@
        "4  11.0        5.0     4.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +598,7 @@
        "max         6.000000       8.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +640,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +660,7 @@
        "(253680, 22)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,49 +671,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Diabetes_binary         1.000000\n",
-       "HighBP                  0.263129\n",
-       "HighChol                0.200276\n",
-       "CholCheck               0.064761\n",
-       "BMI                     0.216843\n",
-       "Smoker                  0.060789\n",
-       "Stroke                  0.105816\n",
-       "HeartDiseaseorAttack    0.177282\n",
-       "PhysActivity           -0.118133\n",
-       "Fruits                 -0.040779\n",
-       "Veggies                -0.056584\n",
-       "HvyAlcoholConsump      -0.057056\n",
-       "AnyHealthcare           0.016255\n",
-       "NoDocbcCost             0.031433\n",
-       "GenHlth                 0.293569\n",
-       "MentHlth                0.069315\n",
-       "PhysHlth                0.171337\n",
-       "DiffWalk                0.218344\n",
-       "Sex                     0.031430\n",
-       "Age                     0.177442\n",
-       "Education              -0.124456\n",
-       "Income                 -0.163919\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.corrwith(df['Diabetes_binary'])"
+    "# Filter binary and continuous columns\n",
+    "binary_columns = df.select_dtypes(include=[np.int64, np.float64]).isin([0, 1]).all()\n",
+    "binary_columns = df.loc[:, binary_columns]\n",
+    "\n",
+    "continuous_columns = df.select_dtypes(include=[np.int64, np.float64]).columns.difference(binary_columns.columns)\n",
+    "continuous_columns = df.loc[:, continuous_columns]\n",
+    "\n",
+    "# Print the filtered columns\n",
+    "dependent = df['Diabetes_binary']\n",
+    "binary_columns = binary_columns.drop(columns='Diabetes_binary')\n",
+    "\n",
+    "ordinal_columns = continuous_columns[['Education', 'Income', 'Age']]\n",
+    "continuous_columns = continuous_columns.drop(columns=['Education', 'Income', 'Age'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary - Binary:\n",
+      "Column name: HighBP\n",
+      "Chi-square: 17562.446089970756\n",
+      "Phi coefficient: 0.26311729006893114\n",
+      "Column name: HighChol\n",
+      "Chi-square: 10174.074889118883\n",
+      "Phi coefficient: 0.20026467516249455\n",
+      "Column name: CholCheck\n",
+      "Chi-square: 1062.9381436620106\n",
+      "Phi coefficient: 0.06473078614867715\n",
+      "Column name: Smoker\n",
+      "Chi-square: 937.0557592033365\n",
+      "Phi coefficient: 0.06077704806196469\n",
+      "Column name: Stroke\n",
+      "Chi-square: 2838.91654723932\n",
+      "Phi coefficient: 0.10578721858844647\n",
+      "Column name: HeartDiseaseorAttack\n",
+      "Chi-square: 7971.155840643359\n",
+      "Phi coefficient: 0.17726277159884543\n",
+      "Column name: PhysActivity\n",
+      "Chi-square: 3539.419369936673\n",
+      "Phi coefficient: 0.11811985281570916\n",
+      "Column name: Fruits\n",
+      "Chi-square: 421.61153890191144\n",
+      "Phi coefficient: 0.04076741080508834\n",
+      "Column name: Veggies\n",
+      "Chi-square: 811.8059748359334\n",
+      "Phi coefficient: 0.056569586882247246\n",
+      "Column name: HvyAlcoholConsump\n",
+      "Chi-square: 825.1187559262196\n",
+      "Phi coefficient: 0.05703154213964547\n",
+      "Column name: AnyHealthcare\n",
+      "Chi-square: 66.81237194302645\n",
+      "Phi coefficient: 0.01622875973310578\n",
+      "Column name: NoDocbcCost\n",
+      "Chi-square: 250.3137525738294\n",
+      "Phi coefficient: 0.031412264160595095\n",
+      "Column name: DiffWalk\n",
+      "Chi-square: 12092.319740590498\n",
+      "Phi coefficient: 0.21832913620924457\n",
+      "Column name: Sex\n",
+      "Chi-square: 250.41366775412817\n",
+      "Phi coefficient: 0.03141853279120467\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Binary - Binary:\")\n",
+    "for var in binary_columns.columns:\n",
+    "    # Binary - Binary (Chi-square and Phi coefficient)\n",
+    "    contingency_table = pd.crosstab(dependent, binary_columns[var])\n",
+    "    chi_square, _, _, _ = chi2_contingency(contingency_table)\n",
+    "    phi_coefficient = np.sqrt(chi_square / len(dependent))\n",
+    "    \n",
+    "    print(\"Column name:\", var)\n",
+    "    print(\"Chi-square:\", chi_square)\n",
+    "    print(\"Phi coefficient:\", phi_coefficient)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary - Ordinal:\n",
+      "Column name: Education\n",
+      "Rank Biserial Correlation: -0.12445596921588145\n",
+      "Column name: Income\n",
+      "Rank Biserial Correlation: -0.16391878680099342\n",
+      "Column name: Age\n",
+      "Rank Biserial Correlation: 0.1774418721672562\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Binary - Ordinal:\")\n",
+    "for var in ordinal_columns.columns:\n",
+    "   # Convert binary variable into ranks\n",
+    "   dependentrank = dependent.rank()\n",
+    "\n",
+    "   # Calculate rank biserial correlation using Pearson correlation\n",
+    "   rank_biserial, _ = pearsonr(dependent, ordinal_columns[var])\n",
+    "   print(\"Column name:\", var)\n",
+    "   print(\"Rank Biserial Correlation:\", rank_biserial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary - Continuous:\n",
+      "Column name: BMI\n",
+      "Point biserial:\n",
+      "PointbiserialrResult(correlation=0.21684306020312014, pvalue=0.0)\n",
+      "Column name: GenHlth\n",
+      "Point biserial:\n",
+      "PointbiserialrResult(correlation=0.29356906307871716, pvalue=0.0)\n",
+      "Column name: MentHlth\n",
+      "Point biserial:\n",
+      "PointbiserialrResult(correlation=0.06931508263835526, pvalue=1.1432833408816434e-267)\n",
+      "Column name: PhysHlth\n",
+      "Point biserial:\n",
+      "PointbiserialrResult(correlation=0.17133670038725035, pvalue=0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Binary - Continuous:\")\n",
+    "for var in continuous_columns.columns:\n",
+    "    print(\"Column name:\", var)\n",
+    "    print(\"Point biserial:\")\n",
+    "    correlation_result = pointbiserialr(dependent, continuous_columns[var])\n",
+    "    print(correlation_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +834,7 @@
        "<AxesSubplot: xlabel='BMI', ylabel='Count'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -741,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +864,7 @@
        "<AxesSubplot: xlabel='GenHlth', ylabel='Count'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -771,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +894,7 @@
        "<AxesSubplot: xlabel='MentHlth', ylabel='Count'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -801,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +924,7 @@
        "<AxesSubplot: xlabel='PhysHlth', ylabel='Count'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -831,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +954,7 @@
        "<AxesSubplot: xlabel='Age', ylabel='Count'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -861,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +984,7 @@
        "<AxesSubplot: xlabel='Income', ylabel='Count'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -891,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +1014,7 @@
        "<AxesSubplot: xlabel='Education', ylabel='Count'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -921,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +1044,7 @@
        "<AxesSubplot: xlabel='Diabetes_binary', ylabel='count'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -951,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1259,21 +1373,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_571/260390452.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['intercept'] = 1\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1286,8 +1388,8 @@
       "Dep. Variable:        Diabetes_binary   No. Observations:               229474\n",
       "Model:                          Logit   Df Residuals:                   229452\n",
       "Method:                           MLE   Df Model:                           21\n",
-      "Date:                Sat, 20 May 2023   Pseudo R-squ.:                  0.1909\n",
-      "Time:                        15:30:46   Log-Likelihood:                -79426.\n",
+      "Date:                Sat, 03 Jun 2023   Pseudo R-squ.:                  0.1909\n",
+      "Time:                        18:45:35   Log-Likelihood:                -79426.\n",
       "converged:                       True   LL-Null:                       -98165.\n",
       "Covariance Type:            nonrobust   LLR p-value:                     0.000\n",
       "========================================================================================\n",
