--- a/GSLC_9/ANALYSIS.ipynb
+++ b/GSLC_9/ANALYSIS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4  11.0        5.0     4.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "max         6.000000       8.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "(253680, 22)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,16 +683,17 @@
     "continuous_columns = df.loc[:, continuous_columns]\n",
     "\n",
     "# Print the filtered columns\n",
-    "dependent = df['Diabetes_binary']\n",
-    "binary_columns = binary_columns.drop(columns='Diabetes_binary')\n",
+    "dependent = binary_columns['Diabetes_binary']\n",
+    "binary_columns = binary_columns.drop('Diabetes_binary', axis=1)\n",
     "\n",
-    "ordinal_columns = continuous_columns[['Education', 'Income', 'Age']]\n",
-    "continuous_columns = continuous_columns.drop(columns=['Education', 'Income', 'Age'])"
+    "ordinal_columns = continuous_columns[['Education', 'Income', 'Age', 'GenHlth']]\n",
+    "linear_columns = continuous_columns[['BMI']]\n",
+    "continuous_columns = continuous_columns.drop(['Education', 'Income', 'Age', 'GenHlth', 'BMI'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -702,65 +703,107 @@
       "Binary - Binary:\n",
       "Column name: HighBP\n",
       "Chi-square: 17562.446089970756\n",
-      "Phi coefficient: 0.26311729006893114\n",
+      "Phi coefficient: HighBP\n",
+      "0.0    0.348202\n",
+      "1.0    0.401717\n",
+      "dtype: float64\n",
       "Column name: HighChol\n",
       "Chi-square: 10174.074889118883\n",
-      "Phi coefficient: 0.20026467516249455\n",
+      "Phi coefficient: HighChol\n",
+      "0.0    0.26390\n",
+      "1.0    0.30751\n",
+      "dtype: float64\n",
       "Column name: CholCheck\n",
       "Chi-square: 1062.9381436620106\n",
-      "Phi coefficient: 0.06473078614867715\n",
+      "Phi coefficient: CholCheck\n",
+      "0.0    0.335026\n",
+      "1.0    0.065974\n",
+      "dtype: float64\n",
       "Column name: Smoker\n",
       "Chi-square: 937.0557592033365\n",
-      "Phi coefficient: 0.06077704806196469\n",
+      "Phi coefficient: Smoker\n",
+      "0.0    0.081447\n",
+      "1.0    0.091297\n",
+      "dtype: float64\n",
       "Column name: Stroke\n",
       "Chi-square: 2838.91654723932\n",
-      "Phi coefficient: 0.10578721858844647\n",
+      "Phi coefficient: Stroke\n",
+      "0.0    0.108001\n",
+      "1.0    0.525202\n",
+      "dtype: float64\n",
       "Column name: HeartDiseaseorAttack\n",
       "Chi-square: 7971.155840643359\n",
-      "Phi coefficient: 0.17726277159884543\n",
+      "Phi coefficient: HeartDiseaseorAttack\n",
+      "0.0    0.186251\n",
+      "1.0    0.577598\n",
+      "dtype: float64\n",
       "Column name: PhysActivity\n",
       "Chi-square: 3539.419369936673\n",
-      "Phi coefficient: 0.11811985281570916\n",
+      "Phi coefficient: PhysActivity\n",
+      "0.0    0.239394\n",
+      "1.0    0.135802\n",
+      "dtype: float64\n",
       "Column name: Fruits\n",
       "Chi-square: 421.61153890191144\n",
-      "Phi coefficient: 0.04076741080508834\n",
+      "Phi coefficient: Fruits\n",
+      "0.0    0.06741\n",
+      "1.0    0.05119\n",
+      "dtype: float64\n",
       "Column name: Veggies\n",
       "Chi-square: 811.8059748359334\n",
-      "Phi coefficient: 0.056569586882247246\n",
+      "Phi coefficient: Veggies\n",
+      "0.0    0.130267\n",
+      "1.0    0.062800\n",
+      "dtype: float64\n",
       "Column name: HvyAlcoholConsump\n",
       "Chi-square: 825.1187559262196\n",
-      "Phi coefficient: 0.05703154213964547\n",
+      "Phi coefficient: HvyAlcoholConsump\n",
+      "0.0    0.058705\n",
+      "1.0    0.240580\n",
+      "dtype: float64\n",
       "Column name: AnyHealthcare\n",
       "Chi-square: 66.81237194302645\n",
-      "Phi coefficient: 0.01622875973310578\n",
+      "Phi coefficient: AnyHealthcare\n",
+      "0.0    0.073353\n",
+      "1.0    0.016641\n",
+      "dtype: float64\n",
       "Column name: NoDocbcCost\n",
       "Chi-square: 250.3137525738294\n",
-      "Phi coefficient: 0.031412264160595095\n",
+      "Phi coefficient: NoDocbcCost\n",
+      "0.0    0.032824\n",
+      "1.0    0.108269\n",
+      "dtype: float64\n",
       "Column name: DiffWalk\n",
       "Chi-square: 12092.319740590498\n",
-      "Phi coefficient: 0.21832913620924457\n",
+      "Phi coefficient: DiffWalk\n",
+      "0.0    0.239391\n",
+      "1.0    0.532314\n",
+      "dtype: float64\n",
       "Column name: Sex\n",
       "Chi-square: 250.41366775412817\n",
-      "Phi coefficient: 0.03141853279120467\n"
+      "Phi coefficient: Sex\n",
+      "0.0    0.041998\n",
+      "1.0    0.047347\n",
+      "dtype: float64\n"
      ]
     }
    ],
    "source": [
     "print(\"Binary - Binary:\")\n",
-    "for var in binary_columns.columns:\n",
+    "for var in binary_columns:\n",
     "    # Binary - Binary (Chi-square and Phi coefficient)\n",
-    "    contingency_table = pd.crosstab(dependent, binary_columns[var])\n",
-    "    chi_square, _, _, _ = chi2_contingency(contingency_table)\n",
-    "    phi_coefficient = np.sqrt(chi_square / len(dependent))\n",
-    "    \n",
+    "    table = pd.crosstab(dependent, binary_columns[var])\n",
+    "    chi_square, p_value, _, _ = chi2_contingency(table)\n",
+    "    phi_coefficient = np.sqrt(chi_square / np.sum(table))\n",
+    "  \n",
     "    print(\"Column name:\", var)\n",
     "    print(\"Chi-square:\", chi_square)\n",
-    "    print(\"Phi coefficient:\", phi_coefficient)"
+    "    print(\"Phi coefficient:\", phi_coefficient)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +816,9 @@
       "Column name: Income\n",
       "Rank Biserial Correlation: -0.16391878680099342\n",
       "Column name: Age\n",
-      "Rank Biserial Correlation: 0.1774418721672562\n"
+      "Rank Biserial Correlation: 0.1774418721672562\n",
+      "Column name: GenHlth\n",
+      "Rank Biserial Correlation: 0.29356906307871716\n"
      ]
     }
    ],
@@ -791,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -799,12 +844,6 @@
      "output_type": "stream",
      "text": [
       "Binary - Continuous:\n",
-      "Column name: BMI\n",
-      "Point biserial:\n",
-      "PointbiserialrResult(correlation=0.21684306020312014, pvalue=0.0)\n",
-      "Column name: GenHlth\n",
-      "Point biserial:\n",
-      "PointbiserialrResult(correlation=0.29356906307871716, pvalue=0.0)\n",
       "Column name: MentHlth\n",
       "Point biserial:\n",
       "PointbiserialrResult(correlation=0.06931508263835526, pvalue=1.1432833408816434e-267)\n",
@@ -824,8 +863,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "linearcor = linear_columns['BMI'].corr(dependent)\n",
+    "print(\"BMI to Diabetes Binary correlation:\", linearcor)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +882,7 @@
        "<AxesSubplot: xlabel='BMI', ylabel='Count'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -855,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +912,7 @@
        "<AxesSubplot: xlabel='GenHlth', ylabel='Count'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -885,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +942,7 @@
        "<AxesSubplot: xlabel='MentHlth', ylabel='Count'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -915,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +972,7 @@
        "<AxesSubplot: xlabel='PhysHlth', ylabel='Count'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -945,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +1002,7 @@
        "<AxesSubplot: xlabel='Age', ylabel='Count'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -975,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +1032,7 @@
        "<AxesSubplot: xlabel='Income', ylabel='Count'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1005,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1062,7 @@
        "<AxesSubplot: xlabel='Education', ylabel='Count'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1035,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1092,7 @@
        "<AxesSubplot: xlabel='Diabetes_binary', ylabel='count'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1065,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1296,84 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                 df         sum_sq       mean_sq            F  PR(>F)\n",
-      "Education       1.0   15590.200687  15590.200687  14622.07691     0.0\n",
-      "Residual   229472.0  244665.279359      1.066210          NaN     NaN\n"
-     ]
-    }
-   ],
-   "source": [
-    "import statsmodels.api as sm\n",
-    "from statsmodels.formula.api import ols\n",
-    "\n",
-    "# Assuming 'data' is a pandas DataFrame containing the data\n",
-    "\n",
-    "# Fit the linear regression model\n",
-    "model = ols('GenHlth ~ Education', data=df).fit()\n",
-    "\n",
-    "# Perform one-way ANOVA\n",
-    "anova_table = sm.stats.anova_lm(model)\n",
-    "\n",
-    "# Print the ANOVA table\n",
-    "print(anova_table)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Diabetes_binary         1.000000\n",
-      "HighBP                  0.254318\n",
-      "HighChol                0.194944\n",
-      "CholCheck               0.072523\n",
-      "BMI                     0.205086\n",
-      "Smoker                  0.045504\n",
-      "Stroke                  0.099193\n",
-      "HeartDiseaseorAttack    0.168213\n",
-      "PhysActivity           -0.100404\n",
-      "Fruits                 -0.024805\n",
-      "Veggies                -0.041734\n",
-      "HvyAlcoholConsump      -0.065950\n",
-      "AnyHealthcare           0.025331\n",
-      "NoDocbcCost             0.020048\n",
-      "GenHlth                 0.276940\n",
-      "MentHlth                0.054153\n",
-      "PhysHlth                0.156211\n",
-      "DiffWalk                0.205302\n",
-      "Sex                     0.032724\n",
-      "Age                     0.177263\n",
-      "Education              -0.102686\n",
-      "Income                 -0.140659\n",
-      "Name: Diabetes_binary, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculate the correlations\n",
-    "correlations = df.corr()\n",
-    "\n",
-    "# Extract correlations with \"Diabetes_binary\" variable\n",
-    "target_correlations = correlations.loc[\"Diabetes_binary\"]\n",
-    "\n",
-    "# Print the target correlations\n",
-    "print(target_correlations)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1388,8 +1359,8 @@
       "Dep. Variable:        Diabetes_binary   No. Observations:               229474\n",
       "Model:                          Logit   Df Residuals:                   229452\n",
       "Method:                           MLE   Df Model:                           21\n",
-      "Date:                Sat, 03 Jun 2023   Pseudo R-squ.:                  0.1909\n",
-      "Time:                        18:45:35   Log-Likelihood:                -79426.\n",
+      "Date:                Sun, 04 Jun 2023   Pseudo R-squ.:                  0.1909\n",
+      "Time:                        21:17:42   Log-Likelihood:                -79426.\n",
       "converged:                       True   LL-Null:                       -98165.\n",
       "Covariance Type:            nonrobust   LLR p-value:                     0.000\n",
       "========================================================================================\n",
