--- a/GSLC_9/Rcode.Rmd
+++ b/GSLC_9/Rcode.Rmd
@@ -123,12 +123,6 @@ Overall, this is a good result that indicates a strong relationship between the 
 t.test(data$BMI ~ data$Diabetes_binary)
 ```
 The p-value is very small, which means that the chance of observing such a large difference in BMI between the two groups by random chance alone is very low. The t-value of -99.92 suggests that the difference in BMI between the two groups is quite substantial.
-```{r}
-# one-way ANOVA of GenHlth based on education level
-fit <- lm(GenHlth ~ Education, data = data)
-anova(fit)
-```
-the Education variable accounts for a significant proportion of the variance in General Health status, as indicated by the large F-value and very small p-value (< 2.2e-16). The Sum Sq and Mean Sq values indicate the amount of variability in the GenHlth variable that can be attributed to the Education variable. The small residual Mean Sq value suggests that there is very little variability in GenHlth that is not accounted for by the Education variable. Overall, this is a good result that indicates a strong relationship between Education level and General Health status.
 
 ```{r}
 
@@ -143,14 +137,15 @@ continuous_columns <- data %>%
   select_if(function(x) is.numeric(x) && !all(x %in% c(0, 1)))
 
 # Print the filtered columns
-dependent = data.frame(binary_columns$Diabetes_binary)
-binary_columns <- binary_columns[, -which(names(binary_columns) == "Diabetes_binary")]
+dependent = subset(binary_columns, select = c(Diabetes_binary))
+binary_columns <- subset(binary_columns, select = -c(Diabetes_binary))
 
-ordinal_columns <- subset(continuous_columns, select = c(Education, Income, Age))
-continuous_columns <- subset(continuous_columns, select = -c(Education, Income, Age))
+ordinal_columns <- subset(continuous_columns, select = c(Education, Income, Age, GenHlth))
+linear_columns <- subset(continuous_columns, select = c(BMI))
+continuous_columns <- subset(continuous_columns, select = -c(Education, Income, Age, GenHlth, BMI))
 
 print(ordinal_columns)
-
+print(linear_columns)
 print(binary_columns)
 print(continuous_columns)
 print(dependent)
@@ -162,8 +157,9 @@ print(dependent)
 print("Binary - Binary:")
 for (var in colnames(binary_columns)) {
   # Binary - Binary (Chi-square and Phi coefficient)
-  chi_square <- chisq.test(dependent, binary_columns[[var]])$statistic
-  phi_coefficient <- sqrt(chi_square / length(dependent))
+  chi_square <- chisq.test(dependent$Diabetes_binary, binary_columns[[var]])$statistic
+  table <- table(dependent$Diabetes_binary, binary_columns[[var]])
+  phi_coefficient <- sqrt(chi_square / sum(table))
   
   print(paste("Column name:", var))
   print(paste("Chi-square:", chi_square))
@@ -178,7 +174,7 @@ library(ltm)
 print("Binary - Ordinal:")
 for (var in colnames(ordinal_columns)) {
 
-  correlation_result <- biserial.cor(ordinal_columns[[var]], dependent$binary_columns.Diabetes_binary)
+  correlation_result <- biserial.cor(ordinal_columns[[var]], dependent$Diabetes_binary)
 
   rank_biserial <- correlation_result
   
@@ -192,11 +188,14 @@ print("Binary - continuos:")
 for (var in colnames(continuous_columns)) {
   print(paste("Column name:", var))
   print("point biserial:")
-  print(cor.test(continuous_columns[[var]], dependent$binary_columns.Diabetes_binary))
+  print(cor.test(continuous_columns[[var]], dependent$Diabetes_binary))
 }
 ```
 
-
+```{r}
+linearcor <- cor(dependent$Diabetes_binary, linear_columns$BMI, method = "pearson")
+print(paste("BMI to Diabtes Binary correlation : ",linearcor))
+```
 
 ```{r}
 model <- glm(Diabetes_binary ~ ., data = data, family = "binomial")
